# viva-mama-hq

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .npmrc  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION_NOTES.md  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  ruff.toml  tsconfig.base.json  turbo.json
services/chatbot/: .dockerignore  .env.example  .gitignore  50_chat_e2e.ipynb  Dockerfile  README.md  docker-compose.yaml  ingest_data.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_context_server.py  test_db_connection.py  test_pipeline.ipynb  test_products.py  test_recommendation_tool.py  test_user_profile_tool.py
services/chatbot/.github/workflows/: build-docker-image.yaml  deploy-cloud-run.yaml
services/chatbot/app/: settings.py
services/chatbot/app/api/: main.py
services/chatbot/app/chains/: chat_pipeline.py  chat_pipeline_mcp.py  router.py
services/chatbot/app/escalation/: policy.py
services/chatbot/app/guardrails/: input_guard.py
services/chatbot/app/llm/: groq_client.py
services/chatbot/app/mcp/: __init__.py  adapter.py  context_server.py  db_connection.py  server.py
services/chatbot/app/memory/: redis_memory.py
services/chatbot/app/products/: models.py  repo.py  tool.py
services/chatbot/data/: SOURCES.md
services/chatbot/loadtests/: README.md
services/chatbot/tests/: __init__.py  test_article_retrieval_kb.py  test_curation_and_ingestion.py  test_safety_guardrails.py
(+676 files in other folders)
